--- a/css/keyframes.css
+++ b/css/keyframes.css
@@ -1,14 +1,37 @@
 @keyframes bouger {
-    0%{
-        opacity: 0
+    0% {
+        opacity: .2
     }
-    25%{
+
+    25% {
         opacity: .25;
     }
-    50%{
-       opacity: 0.50
+
+    50% {
+        opacity: 0.50
     }
-    100%{
+
+    100% {
         opacity: 1;
+    }
+}
+
+@keyframes anim-corbeil {
+    from {
+        transform: translateX(100%);
+    }
+
+    to {
+        transform: translateX(0);
+    }
+}
+
+@keyframes anime-show-list {
+    from {
+        transform: translateY(-100%);
+    }
+
+    to {
+        transform: translateY(0);
     }
 }
