--- a/css/style.css
+++ b/css/style.css
@@ -2,24 +2,10 @@
   box-sizing: border-box;
   /* padding: 0;*/
   margin: 0;
+  line-break: anywhere;
   text-align: center;
 }
-@keyframes anim-corbeil {
-  from {
-    transform: translateX(100%);
-  }
-  to {
-    transform: translateX(0);
-  }
-}
-@keyframes anime-show-list {
-  from {
-    transform: translateY(-100%);
-  }
-  to {
-    transform: translateY(0);
-  }
-}
+
 body {
   background-color: #f4f6f6;
   overflow: hidden;
