--- a/css/style.alert.css
+++ b/css/style.alert.css
@@ -15,14 +15,18 @@
   transform: translateY(-300%);
 }
 
-.notification.show-totificatinon {
+.notification.show-notificatinon {
   transform: translateY(0%);
+  -webkit-animation-name: bounceOutUp;
+  animation-name: bounceOutUp 5s linear forwards;
+  -webkit-animation-duration: 5s;
+  animation-duration: 10s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  /* animation: notifier 5s linear forwards; */
 }
 
-/* .notification.show-totificatino::before {
-    content: '';
-    animation: notifier 5s linear forwards;
-  } */
+
 
 .notification span {
   font-size: 3rem;
@@ -107,11 +111,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-   visibility: hidden;
+  visibility: hidden;
 }
-.container-popup.visible{
+
+.container-popup.visible {
   visibility: visible;
 }
+
 .body-pop {
   border-radius: 10px;
   background-color: #fff;
@@ -172,7 +178,12 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
+.cont-icone-pop {
+  display: flex;
+  justify-content: center;
+  animation: bounce-in-top 1.1s both;
+  -webkit-animation: bounce-in-top 1.1s both;
+}
 .icone-poup {
   height: 100px;
   width: 100px;
@@ -188,16 +199,14 @@
   font-weight: 500;
   margin: 10px 0;
 }
-.cont-icone-pop{
-  display: flex;
-  justify-content: center;
-}
-#message-alerte{
+
+#message-alerte {
   margin: 1rem;
   font-size: 1.3rem;
 }
-.fa-exclamation{
-  animation: bouger 2s infinite ;
+
+.fa-exclamation {
+  animation: bouger 2s infinite;
 }
 
 /* end popup d'alert */
